# accelerated_c

./: README.md
5.1/source/: CMakeLists.txt  main.cpp
5.1/source/include/: breaker.h  getline.h  print_out.h  sort_detect.h  string_length.h
5.1/source/src/: breaker.cpp  getline.cpp  print_out.cpp  sort_detect.cpp  string_length.cpp
